fix episodes docs
